--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-Armageddon/Armageddon.xcodeproj/xcuserdata/
+Armageddon/Armageddon.xcodeproj/xcuserdata/semenbelakov.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
