--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-Armageddon/Armageddon.xcodeproj/xcuserdata/semenbelakov.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+.DS_Store
+
+Networking/Networking.xcodeproj/project.xcworkspace/xcuserdata/semenbelakov.xcuserdatad/UserInterfaceState.xcuserstate
+
+Networking/Networking.xcodeproj/xcuserdata/semenbelakov.xcuserdatad/xcdebugger/
