--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
 
-Networking/Networking.xcodeproj/project.xcworkspace/xcuserdata/semenbelakov.xcuserdatad/UserInterfaceState.xcuserstate
+Armageddon/Armageddon.xcodeproj/project.xcworkspace/xcuserdata/semenbelakov.xcuserdatad/UserInterfaceState.xcuserstate
 
-Networking/Networking.xcodeproj/xcuserdata/semenbelakov.xcuserdatad/xcdebugger/
+Armageddon/Armageddon.xcodeproj/xcuserdata/semenbelakov.xcuserdatad/xcdebugger/
